--- a/package.json
+++ b/package.json
@@ -5,16 +5,28 @@
   "description": "desc",
   "main": "./electron/main.js",
   "scripts": {
-    "start": "electronmon .",
+    "start": "concurrently \"zhrk-scripts start --no-open\" \"electronmon .\"",
     "build": "electron-builder"
   },
   "dependencies": {
-    "directory-tree": "3.5.2"
+    "directory-tree": "3.5.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/react": "18.3.10",
+    "@types/react-dom": "18.3.0",
+    "@zhrk/pack": "1.0.55",
+    "concurrently": "9.0.1",
     "electron": "30.0.9",
     "electron-builder": "24.13.3",
     "electronmon": "2.0.3"
+  },
+  "electronmon": {
+    "patterns": [
+      "!**/*",
+      "./electron/**"
+    ]
   },
   "build": {
     "electronLanguages": [
@@ -27,5 +39,12 @@
     "win": {
       "target": "portable"
     }
+  },
+  "prettier": "@zhrk/pack/.prettierrc.js",
+  "stylelint": {
+    "extends": "@zhrk/pack/stylelint.config.js"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/@zhrk/pack/.eslintrc.js"
   }
 }
