--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
   "main": "./electron/main.js",
   "scripts": {
     "start": "concurrently \"zhrk-scripts start --no-open\" \"electronmon .\"",
-    "build": "electron-builder"
+    "build": "electron-builder",
+    "upgrade": "npx npm-check --update --save-exact"
   },
   "dependencies": {
     "dree": "5.1.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "zustand": "4.5.5"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "use-sync-external-store": "1.5.0",
+    "zustand": "5.0.6"
   },
   "devDependencies": {
-    "@types/react": "18.3.10",
-    "@types/react-dom": "18.3.0",
-    "@zhrk/pack": "1.0.58",
-    "concurrently": "9.0.1",
-    "electron": "30.0.9",
-    "electron-builder": "24.13.3",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@zhrk/pack": "1.0.96",
+    "concurrently": "9.2.0",
+    "electron": "37.2.1",
+    "electron-builder": "26.0.12",
     "electronmon": "2.0.3"
   },
   "electronmon": {
