--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "upgrade": "npx npm-check --update --save-exact"
   },
   "dependencies": {
+    "@hono/node-server": "1.16.0",
     "dree": "5.1.5",
+    "hono": "4.8.5",
+    "music-metadata": "11.6.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "use-sync-external-store": "1.5.0",
