--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hono/node-server": "1.16.0",
     "clsx": "2.1.1",
     "dree": "5.1.5",
+    "fast-average-color": "9.5.0",
     "hono": "4.8.5",
     "music-metadata": "11.6.1",
     "react": "19.1.0",
