next track pseudo random

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "music-metadata": "11.6.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "remeda": "2.27.0",
     "use-sync-external-store": "1.5.0",
     "zustand": "5.0.6"
   },
