--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "19.1.1",
     "remeda": "2.30.0",
     "use-sync-external-store": "1.5.0",
+    "wouter": "3.7.1",
     "zustand": "5.0.8"
   },
   "devDependencies": {
