--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "description": "desc",
   "main": "./electron/main.js",
   "scripts": {
-    "start": "concurrently \"zhrk-scripts start:rsbuild --port 4444\" \"electronmon .\"",
+    "start": "concurrently \"zhrk-scripts start --port 4444\" \"electronmon .\"",
     "build": "node ./electron/scripts/build.js",
     "upgrade": "npx npm-check --update --save-exact"
   },
   "dependencies": {
-    "@hono/node-server": "1.19.7",
+    "@hono/node-server": "1.19.8",
     "clsx": "2.1.1",
     "dree": "5.1.5",
     "electron-log": "5.4.3",
-    "hono": "4.11.3",
+    "hono": "4.11.4",
     "music-metadata": "11.10.5",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "remeda": "2.33.1",
+    "remeda": "2.33.3",
     "use-sync-external-store": "1.6.0",
     "wouter": "3.9.0",
-    "zustand": "5.0.9"
+    "zustand": "5.0.10"
   },
   "devDependencies": {
-    "@types/react": "19.2.7",
+    "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
-    "@zhrk/pack": "1.0.96",
+    "@zhrk/pack": "0.0.18",
     "concurrently": "9.2.1",
     "electron": "39.2.7",
     "electron-builder": "26.4.0",
