--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "concurrently \"zhrk-scripts start --port 4444\" \"electronmon .\"",
     "build": "node ./electron/scripts/build.js",
+    "test": "zhrk-scripts test",
     "upgrade": "npx npm-check --update --save-exact"
   },
   "dependencies": {
